--- a/resources/sass/elements/_preview.scss
+++ b/resources/sass/elements/_preview.scss
@@ -148,10 +148,10 @@
                     content: '';
                     position: absolute;
                     z-index: -2;
-                    left: -50%;
-                    top: -50%;
-                    width: 200%;
-                    height: 200%;
+                    left: 0;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
                     background: #424ece;
                     background: -moz-linear-gradient(left, #424ece 0%, #92cde9 100%);
                     background: -webkit-linear-gradient(left, #424ece 0%, #92cde9 100%);
@@ -161,7 +161,7 @@
                     border-radius: 100%;
                     -webkit-border-radius: 100%;
                     -moz-border-radius: 100%;
-                    animation: rotate 2s linear infinite;
+                    animation: rotate 4s linear infinite;
                 }
 
                 .profile_image {
